@@ -32,6 +32,8 @@ K  6283	IMAP alerts and notifications are not sent during authentication
 K  6324	add ability to fetch and cache entire IMAP message
 K  6325	add ability to return server-specific STATUS responses
 K  6326	add ability to set "peek" flag for all IMAP messages
+K  6327	add ability to specify scope of event queue
+K  6328	add ability to specify an Executor to process events
 
 
 		  CHANGES IN THE 1.5.1 RELEASE
